[package]
name = "lodash-rs"
version = "0.1.0"
edition = "2021"
authors = ["Mark Onyango"]
description = "Lodash but in Rust"
keywords = ["lodash"]
license-file = "LICENSE"
repository = "https://github.com/markonyango/lodash-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
